--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg-start-100 {
+  background-position: center 100px !important;
+}
